clusters/managed/devbench/bugsink/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app bugsink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      containers:
      - name: *app
        image: bugsink/bugsink:2.6
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
            httpHeaders:
              - name: Host
                value: bugs.trusted.nirmalhk7.com
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
