clusters/managed/devbench/bugsink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app bugsink
spec:
  selector:
    app: *app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
