clusters/managed/devbench/bugsink/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app bugsink
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://bugs.trusted.nirmalhk7.com"
    gethomepage.dev/group: Devbench
    gethomepage.dev/icon: "sh-bugsink"
    gethomepage.dev/app: *app # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Bugs
    gethomepage.dev/description: "Error tracking"
    gethomepage.dev/weight: "30"
    gethomepage.dev/pod-selector: "app=bugsink"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: "Host(`bugs.trusted.nirmalhk7.com`)"
      kind: Rule
      services:
        - name: *app
          port: 8000
